Fixed issue with Ajax issue not aligning correctly. Updated the About & Contact pages.

--- a/client/src/style/ajaxImage.css
+++ b/client/src/style/ajaxImage.css
@@ -22,4 +22,5 @@
   width: 32px;
   height: auto;
   margin: 2px;
+  position: fixed;
 }
